fixed layout issues with prompt in tablet view

--- a/familysleep/app/styles/partials/_datepicker.scss
+++ b/familysleep/app/styles/partials/_datepicker.scss
@@ -25,6 +25,7 @@ input[aria-expanded=false] {
   font-size: 20px;
   margin-right: 20px;
   pointer-events: none;
+  width: 150px !important;
 }
 
 md-icon {
@@ -88,4 +89,3 @@ button#yesterday {
   left: 0 !important;
   top: 0 !important;
 }
-
