--- a/familysleep/app/styles/partials/singleweeklyview.scss
+++ b/familysleep/app/styles/partials/singleweeklyview.scss
@@ -34,9 +34,9 @@
 }
 
 #swv-legend {
-	margin-bottom: 90px;
+	margin-bottom: 60px;
   margin-left: 400px;
-  padding-top: 35px;
+  padding-top: 65px;
 }
 
 #swv-legend li {
